@@ -5,6 +5,7 @@
 	  yet.
 
 	* ptp.c/ptp.h: Added "Request Direct Transfer" opcode for newer Canons.
+	* ptp.c/ptp.h: Added "Get Direct Transfer Entries" opcode for newer Canons.
 	* ptp.c: Read event in multiple parts (necessary for Canons who only read 8 
 	  byte per interrupt).
 
